--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,3 @@
-[package]
-name = "odl"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-plex = "0.2.5"
-
-[lib]
-name = "odl"
-path = "src/lib.rs"
-
-[[bin]]
-name = "odl-check"
-path = "src/main.rs"
+[workspace]
+members = ["crates/odl", "crates/odl-lsp"]
+default-members = ["crates/odl"]
